// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button onClick function should work properly 1`] = `
<button
  className="digits orange"
  onClick={[Function]}
  type="button"
>
  +
</button>
`;

exports[`Button should mount Button 1`] = `
<button
  className="digits orange"
  onClick={[Function]}
  type="button"
>
  +
</button>
`;

exports[`Output should mount Output 1`] = `
<div
  className="output"
>
  0
  +
  0
</div>
`;

exports[`Row should mount Row 1`] = `
<div
  className="calculator-btns"
>
  <button
    className="digits"
    onClick={[Function]}
    type="button"
  >
    AC
  </button>
  <button
    className="digits"
    onClick={[Function]}
    type="button"
  >
    +/-
  </button>
  <button
    className="digits"
    onClick={[Function]}
    type="button"
  >
    %
  </button>
  <button
    className="digits orange"
    onClick={[Function]}
    type="button"
  >
    ÷
  </button>
</div>
`;
